compiler/testData/cli/jvm/compatqualDefault.out
compiler/testData/cli/jvm/compatqualUsage.kt:2:11: error: null cannot be a value of a non-null type 'kotlin.String'.
    b.foo(null)
          ^^^^
COMPILATION_ERROR
